<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP140_Main" Id="{3b624aac-2baf-456b-813b-9db3b2cbcfd8}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP140_Main
VAR
	OP140_ModeSelection_FB: Mode_Selection_Block1;
	//OP140_Leak_1: OP140_LeakTesting;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//MOdeselection From HMI
OP140_AutoSequence_1();
OP140_AutoSequence_2();
OP140_AutoSequence_3();
OP140_Error();
OP140_Manual();
Ateq_Comm_Prog();
OP140_Initialization_Seq();
op140_tool_change(); 
op140_ateq_fb();


IF (OP140_HMI_AutoMode AND NOT OP140_HMI_ManualMOde AND NOT OP140_HMI_StepMode) THEN
	OP140_Modeselection_FB.ModeWord:=1;
	ELSIF (NOT OP140_HMI_AutoMode AND OP140_HMI_ManualMOde AND NOT OP140_HMI_StepMode) THEN
		OP140_Modeselection_FB.ModeWord:=2;
	ELSIF  (NOT OP140_HMI_AutoMode AND NOT OP140_HMI_ManualMOde AND  OP140_HMI_StepMode) THEN
		OP140_Modeselection_FB.ModeWord:=3;
    ELSE   
		OP140_Modeselection_FB.ModeWord:=0;
END_IF



OP140_ModeSelection_FB(
	ModeWord:= , 
	HomeConditionOK:=OP140_HomeConditionOK , 
	OperationEnable:= OperationEnable, 
	StartPB:=OP140_HMI_CycleStart , 
	SafetyAndNOError:=OperationEnable , 
	ModeAck:=TRUE , 
	HomingINProgress:= , 
	TempHomeOK:=OP140_Temp_Home_Ok , 
	ResetPB:=OP140_HMI_Reset	 , 
	AutoSelected=>OP140_AutoSelected , 
	ManualSelected=>OP140_ManualSelected , 
	StepSelected=>OP140_StepSelected , 
	ModeSelAck_Indication=> , 
	StatusDisplay=> , 
	AutoRunning:=OP140_AutoRunning , 
	StepRunning:= OP140_StepRunning, 
	StartEnable:=OP140_StartEnable , 
	MachineStop:=OP140_Machine_Stop );
	
	IF OP140_AutoSelected THEN
		OP140_Auto:=TRUE;
		ELSE
			OP140_Auto:=FALSE;
		END_IF
		
	IF 	OP140_StartEnable THEN 
		op140_startenable_1 :=TRUE;
		op140_startenable_2 :=TRUE;
		op140_startenable_3 :=TRUE;
	ELSE
		op140_startenable_1 :=FALSE;
		op140_startenable_2 :=FALSE;
		op140_startenable_3 :=false;
	END_IF

// temp need to be deleted
//IF OP140_STN_ENABLE_1 THEN
//	OP140_STN_ENABLE_2:=TRUE;
//	OP140_STN_ENABLE_3:=TRUE;
//END_IF


	
	

	]]></ST>
    </Implementation>
    <LineIds Name="OP140_Main">
      <LineId Id="3" Count="1" />
      <LineId Id="157" Count="1" />
      <LineId Id="5" Count="3" />
      <LineId Id="164" Count="0" />
      <LineId Id="170" Count="0" />
      <LineId Id="9" Count="38" />
      <LineId Id="142" Count="2" />
      <LineId Id="146" Count="2" />
      <LineId Id="150" Count="1" />
      <LineId Id="149" Count="0" />
      <LineId Id="176" Count="1" />
      <LineId Id="145" Count="0" />
      <LineId Id="179" Count="0" />
      <LineId Id="182" Count="0" />
      <LineId Id="184" Count="0" />
      <LineId Id="183" Count="0" />
      <LineId Id="180" Count="1" />
      <LineId Id="178" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>